v1.0.0/modules/schema/pages/class/TopologicalNode.adoc
= `TopologicalNode`
:toclevels: 4


+++For a detailed substation model a topological node is a set of connectivity nodes that, in the current network state, are connected together through any type of closed switches, including  jumpers. Topological nodes change as the current network state changes (i.e., switches, breakers, etc. change state).
For a planning model, switch statuses are not used to form topological nodes. Instead they are manually created or deleted in a model builder tool. Topological nodes maintained this way are also called "busses".+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TopologicalNode`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`TopologicalNode`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TopologicalNode {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}







TopologicalIsland {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ReportingGroup {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ConnectivityNodeContainer {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



BaseVoltage {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SvInjection {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SvVoltage {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TopologicalIsland {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ConnectivityNode {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Terminal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



BusNameMarker {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






TopologicalNode -> TopologicalIsland: TopologicalIsland


TopologicalNode -> ReportingGroup: ReportingGroup


TopologicalNode -> ConnectivityNodeContainer: ConnectivityNodeContainer


TopologicalNode -> BaseVoltage: BaseVoltage


TopologicalNode -> SvInjection: SvInjection


TopologicalNode -> SvVoltage: SvVoltage


TopologicalNode -> TopologicalIsland: AngleRefTopologicalIsland


TopologicalNode -> ConnectivityNode: ConnectivityNodes


TopologicalNode -> Terminal: Terminal


TopologicalNode -> BusNameMarker: BusNameMarker


TopologicalNode -> DiagramObject: DiagramObjects


TopologicalNode -> InstanceSet: InstanceSet


TopologicalNode -> Name: Names


TopologicalNode -> ChangeSetMember: PropertiesCIMDataObject


TopologicalNode -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<AngleRefTopologicalIsland,`AngleRefTopologicalIsland`>>
| 0..1
| xref::class/TopologicalIsland.adoc[`TopologicalIsland`]
| +++The island for which the node is an angle reference.   Normally there is one angle reference node for each island.+++

| <<BaseVoltage,`BaseVoltage`>>
| 0..1
| xref::class/BaseVoltage.adoc[`BaseVoltage`]
| +++The base voltage of the topological node.+++

| <<ConnectivityNodeContainer,`ConnectivityNodeContainer`>>
| 0..1
| xref::class/ConnectivityNodeContainer.adoc[`ConnectivityNodeContainer`]
| +++The connectivity node container to which the topological node belongs.+++

| <<ReportingGroup,`ReportingGroup`>>
| 0..1
| xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++The reporting group to which the topological node belongs.+++

| <<TopologicalIsland,`TopologicalIsland`>>
| 0..1
| xref::class/TopologicalIsland.adoc[`TopologicalIsland`]
| +++A topological node belongs to a topological island.+++

| <<pInjection,`pInjection`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The active power injected into the bus at this location in addition to injections from equipment.  Positive sign means injection into the TopologicalNode (bus).
Starting value for a steady state solution.+++

| <<qInjection,`qInjection`>>
| 0..1
| xref::class/ReactivePower.adoc[`ReactivePower`]
| +++The reactive power injected into the bus at this location in addition to injections from equipment. Positive sign means injection into the TopologicalNode (bus).
Starting value for a steady state solution.+++

| <<BusNameMarker,`BusNameMarker`>>
| 0..*
| xref::class/BusNameMarker.adoc[`BusNameMarker`]
| +++BusnameMarkers that may refer to a pre defined TopologicalNode.+++

| <<ConnectivityNodes,`ConnectivityNodes`>>
| 0..*
| xref::class/ConnectivityNode.adoc[`ConnectivityNode`]
| +++The connectivity nodes combine together to form this topological node.  May depend on the current state of switches in the network.+++

| <<SvInjection,`SvInjection`>>
| 0..*
| xref::class/SvInjection.adoc[`SvInjection`]
| +++The injection flows state variables associated with the topological node.+++

| <<SvVoltage,`SvVoltage`>>
| 0..*
| xref::class/SvVoltage.adoc[`SvVoltage`]
| +++The state voltage associated with the topological node.+++

| <<Terminal,`Terminal`>>
| 0..*
| xref::class/Terminal.adoc[`Terminal`]
| +++The terminals associated with the topological node.   This can be used as an alternative to the connectivity node path to terminal, thus making it unnecessary to model connectivity nodes in some cases.   Note that if connectivity nodes are in the model, this association would probably not be used as an input specification.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AngleRefTopologicalIsland]
=== `AngleRefTopologicalIsland`
+++The island for which the node is an angle reference.   Normally there is one angle reference node for each island.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.AngleRefTopologicalIsland`
| Cardinality
| 0..1
| Type
| xref::class/TopologicalIsland.adoc[`TopologicalIsland`]


|===

//[discrete]
[#BaseVoltage]
=== `BaseVoltage`
+++The base voltage of the topological node.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.BaseVoltage`
| Cardinality
| 0..1
| Type
| xref::class/BaseVoltage.adoc[`BaseVoltage`]


|===

//[discrete]
[#BusNameMarker]
=== `BusNameMarker`
+++BusnameMarkers that may refer to a pre defined TopologicalNode.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.BusNameMarker`
| Cardinality
| 0..*
| Type
| xref::class/BusNameMarker.adoc[`BusNameMarker`]


|===

//[discrete]
[#ConnectivityNodeContainer]
=== `ConnectivityNodeContainer`
+++The connectivity node container to which the topological node belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.ConnectivityNodeContainer`
| Cardinality
| 0..1
| Type
| xref::class/ConnectivityNodeContainer.adoc[`ConnectivityNodeContainer`]


|===

//[discrete]
[#ConnectivityNodes]
=== `ConnectivityNodes`
+++The connectivity nodes combine together to form this topological node.  May depend on the current state of switches in the network.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.ConnectivityNodes`
| Cardinality
| 0..*
| Type
| xref::class/ConnectivityNode.adoc[`ConnectivityNode`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pInjection]
=== `pInjection`
+++The active power injected into the bus at this location in addition to injections from equipment.  Positive sign means injection into the TopologicalNode (bus).
Starting value for a steady state solution.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.pInjection`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#qInjection]
=== `qInjection`
+++The reactive power injected into the bus at this location in addition to injections from equipment. Positive sign means injection into the TopologicalNode (bus).
Starting value for a steady state solution.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.qInjection`
| Cardinality
| 0..1
| Type
| xref::class/ReactivePower.adoc[`ReactivePower`]


|===

//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++The reporting group to which the topological node belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.ReportingGroup`
| Cardinality
| 0..1
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]


|===

//[discrete]
[#SvInjection]
=== `SvInjection`
+++The injection flows state variables associated with the topological node.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.SvInjection`
| Cardinality
| 0..*
| Type
| xref::class/SvInjection.adoc[`SvInjection`]


|===

//[discrete]
[#SvVoltage]
=== `SvVoltage`
+++The state voltage associated with the topological node.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.SvVoltage`
| Cardinality
| 0..*
| Type
| xref::class/SvVoltage.adoc[`SvVoltage`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Terminal]
=== `Terminal`
+++The terminals associated with the topological node.   This can be used as an alternative to the connectivity node path to terminal, thus making it unnecessary to model connectivity nodes in some cases.   Note that if connectivity nodes are in the model, this association would probably not be used as an input specification.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.Terminal`
| Cardinality
| 0..*
| Type
| xref::class/Terminal.adoc[`Terminal`]


|===

//[discrete]
[#TopologicalIsland]
=== `TopologicalIsland`
+++A topological node belongs to a topological island.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.TopologicalIsland`
| Cardinality
| 0..1
| Type
| xref::class/TopologicalIsland.adoc[`TopologicalIsland`]


|===


