v1.1.0/modules/schema/pages/class/TopologicalNode.adoc
= `TopologicalNode`
:toclevels: 4


+++For a detailed substation model a topological node is a set of connectivity nodes that, in the current network state, are connected together through any type of closed switches, including  jumpers. Topological nodes change as the current network state changes (i.e., switches, breakers, etc. change state).
For a planning model, switch statuses are not used to form topological nodes. Instead they are manually created or deleted in a model builder tool. Topological nodes maintained this way are also called "busses".+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TopologicalNode`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`TopologicalNode`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<AngleRefTopologicalIsland,`AngleRefTopologicalIsland`>>
//| [[slots_table.AngleRefTopologicalIsland]]<<AngleRefTopologicalIsland,`AngleRefTopologicalIsland`>>
| 0..1 +
xref::class/TopologicalIsland.adoc[`TopologicalIsland`]
| +++The island for which the node is an angle reference.   Normally there is one angle reference node for each island.+++
| _n/a_

| <<BaseVoltage,`BaseVoltage`>>
//| [[slots_table.BaseVoltage]]<<BaseVoltage,`BaseVoltage`>>
| 0..1 +
xref::class/BaseVoltage.adoc[`BaseVoltage`]
| +++The base voltage of the topological node.+++
| _n/a_

| <<BusNameMarker,`BusNameMarker`>>
//| [[slots_table.BusNameMarker]]<<BusNameMarker,`BusNameMarker`>>
| 0..* +
xref::class/BusNameMarker.adoc[`BusNameMarker`]
| +++BusnameMarkers that may refer to a pre defined TopologicalNode.+++
| _n/a_

| <<ConnectivityNodeContainer,`ConnectivityNodeContainer`>>
//| [[slots_table.ConnectivityNodeContainer]]<<ConnectivityNodeContainer,`ConnectivityNodeContainer`>>
| 0..1 +
xref::class/ConnectivityNodeContainer.adoc[`ConnectivityNodeContainer`]
| +++The connectivity node container to which the topological node belongs.+++
| _n/a_

| <<ConnectivityNodes,`ConnectivityNodes`>>
//| [[slots_table.ConnectivityNodes]]<<ConnectivityNodes,`ConnectivityNodes`>>
| 0..* +
xref::class/ConnectivityNode.adoc[`ConnectivityNode`]
| +++The connectivity nodes combine together to form this topological node.  May depend on the current state of switches in the network.+++
| _n/a_

| <<ReportingGroup,`ReportingGroup`>>
//| [[slots_table.ReportingGroup]]<<ReportingGroup,`ReportingGroup`>>
| 0..1 +
xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++The reporting group to which the topological node belongs.+++
| _n/a_

| <<SvInjection,`SvInjection`>>
//| [[slots_table.SvInjection]]<<SvInjection,`SvInjection`>>
| 0..* +
xref::class/SvInjection.adoc[`SvInjection`]
| +++The injection flows state variables associated with the topological node.+++
| _n/a_

| <<SvVoltage,`SvVoltage`>>
//| [[slots_table.SvVoltage]]<<SvVoltage,`SvVoltage`>>
| 0..* +
xref::class/SvVoltage.adoc[`SvVoltage`]
| +++The state voltage associated with the topological node.+++
| _n/a_

| <<Terminal,`Terminal`>>
//| [[slots_table.Terminal]]<<Terminal,`Terminal`>>
| 0..* +
xref::class/Terminal.adoc[`Terminal`]
| +++The terminals associated with the topological node.   This can be used as an alternative to the connectivity node path to...+++
| _n/a_

| <<TopologicalIsland,`TopologicalIsland`>>
//| [[slots_table.TopologicalIsland]]<<TopologicalIsland,`TopologicalIsland`>>
| 0..1 +
xref::class/TopologicalIsland.adoc[`TopologicalIsland`]
| +++A topological node belongs to a topological island.+++
| _n/a_

| <<pInjection,`pInjection`>>
//| [[slots_table.pInjection]]<<pInjection,`pInjection`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The active power injected into the bus at this location in addition to injections from equipment.  Positive sign means...+++
| _n/a_

| <<qInjection,`qInjection`>>
//| [[slots_table.qInjection]]<<qInjection,`qInjection`>>
| 0..1 +
xref::class/ReactivePower.adoc[`ReactivePower`]
| +++The reactive power injected into the bus at this location in addition to injections from equipment. Positive sign means...+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AngleRefTopologicalIsland]
=== `AngleRefTopologicalIsland`
+++The island for which the node is an angle reference.   Normally there is one angle reference node for each island.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.AngleRefTopologicalIsland`
| Cardinality
| 0..1
| Type
| xref::class/TopologicalIsland.adoc[`TopologicalIsland`]


|===

////
[.text-left]
--
<<slots_table.AngleRefTopologicalIsland,&#10548;>>
--
////


//[discrete]
[#BaseVoltage]
=== `BaseVoltage`
+++The base voltage of the topological node.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.BaseVoltage`
| Cardinality
| 0..1
| Type
| xref::class/BaseVoltage.adoc[`BaseVoltage`]


|===

////
[.text-left]
--
<<slots_table.BaseVoltage,&#10548;>>
--
////


//[discrete]
[#BusNameMarker]
=== `BusNameMarker`
+++BusnameMarkers that may refer to a pre defined TopologicalNode.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.BusNameMarker`
| Cardinality
| 0..*
| Type
| xref::class/BusNameMarker.adoc[`BusNameMarker`]


|===

////
[.text-left]
--
<<slots_table.BusNameMarker,&#10548;>>
--
////


//[discrete]
[#ConnectivityNodeContainer]
=== `ConnectivityNodeContainer`
+++The connectivity node container to which the topological node belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.ConnectivityNodeContainer`
| Cardinality
| 0..1
| Type
| xref::class/ConnectivityNodeContainer.adoc[`ConnectivityNodeContainer`]


|===

////
[.text-left]
--
<<slots_table.ConnectivityNodeContainer,&#10548;>>
--
////


//[discrete]
[#ConnectivityNodes]
=== `ConnectivityNodes`
+++The connectivity nodes combine together to form this topological node.  May depend on the current state of switches in the network.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.ConnectivityNodes`
| Cardinality
| 0..*
| Type
| xref::class/ConnectivityNode.adoc[`ConnectivityNode`]


|===

////
[.text-left]
--
<<slots_table.ConnectivityNodes,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pInjection]
=== `pInjection`
+++The active power injected into the bus at this location in addition to injections from equipment.  Positive sign means injection into the TopologicalNode (bus).
Starting value for a steady state solution.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.pInjection`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.pInjection,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#qInjection]
=== `qInjection`
+++The reactive power injected into the bus at this location in addition to injections from equipment. Positive sign means injection into the TopologicalNode (bus).
Starting value for a steady state solution.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.qInjection`
| Cardinality
| 0..1
| Type
| xref::class/ReactivePower.adoc[`ReactivePower`]


|===

////
[.text-left]
--
<<slots_table.qInjection,&#10548;>>
--
////


//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++The reporting group to which the topological node belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.ReportingGroup`
| Cardinality
| 0..1
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]


|===

////
[.text-left]
--
<<slots_table.ReportingGroup,&#10548;>>
--
////


//[discrete]
[#SvInjection]
=== `SvInjection`
+++The injection flows state variables associated with the topological node.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.SvInjection`
| Cardinality
| 0..*
| Type
| xref::class/SvInjection.adoc[`SvInjection`]


|===

////
[.text-left]
--
<<slots_table.SvInjection,&#10548;>>
--
////


//[discrete]
[#SvVoltage]
=== `SvVoltage`
+++The state voltage associated with the topological node.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.SvVoltage`
| Cardinality
| 0..*
| Type
| xref::class/SvVoltage.adoc[`SvVoltage`]


|===

////
[.text-left]
--
<<slots_table.SvVoltage,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Terminal]
=== `Terminal`
+++The terminals associated with the topological node.   This can be used as an alternative to the connectivity node path to terminal, thus making it unnecessary to model connectivity nodes in some cases.   Note that if connectivity nodes are in the model, this association would probably not be used as an input specification.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.Terminal`
| Cardinality
| 0..*
| Type
| xref::class/Terminal.adoc[`Terminal`]


|===

////
[.text-left]
--
<<slots_table.Terminal,&#10548;>>
--
////


//[discrete]
[#TopologicalIsland]
=== `TopologicalIsland`
+++A topological node belongs to a topological island.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TopologicalNode.TopologicalIsland`
| Cardinality
| 0..1
| Type
| xref::class/TopologicalIsland.adoc[`TopologicalIsland`]


|===

////
[.text-left]
--
<<slots_table.TopologicalIsland,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/BaseVoltage.adoc[`BaseVoltage`] | xref::class/BaseVoltage.adoc#TopologicalNode[`TopologicalNode`]



| xref::class/BusNameMarker.adoc[`BusNameMarker`] | xref::class/BusNameMarker.adoc#TopologicalNode[`TopologicalNode`]



| xref::class/ConnectivityNode.adoc[`ConnectivityNode`] | xref::class/ConnectivityNode.adoc#TopologicalNode[`TopologicalNode`]



| xref::class/ConnectivityNodeContainer.adoc[`ConnectivityNodeContainer`] | xref::class/ConnectivityNodeContainer.adoc#TopologicalNode[`TopologicalNode`]



| xref::class/ReportingGroup.adoc[`ReportingGroup`] | xref::class/ReportingGroup.adoc#TopologicalNode[`TopologicalNode`]



| xref::class/SvInjection.adoc[`SvInjection`] | xref::class/SvInjection.adoc#TopologicalNode[`TopologicalNode`]



| xref::class/SvVoltage.adoc[`SvVoltage`] | xref::class/SvVoltage.adoc#TopologicalNode[`TopologicalNode`]



| xref::class/Terminal.adoc[`Terminal`] | xref::class/Terminal.adoc#TopologicalNode[`TopologicalNode`]



| xref::class/TopologicalIsland.adoc[`TopologicalIsland`] | xref::class/TopologicalIsland.adoc#TopologicalNodes[`TopologicalNodes`]


|===

